[package]
name = "blue-pill"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
alloc-cortex-m = "0.4.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
lis3dh = "0.3.0"
accelerometer = "0.12.0"
micromath = "1.1.0"
ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
profont = "0.4.0"
shared-bus = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]

[profile.release]
lto = true

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"
